fix bug #38424 (Different attribute assignment if new or existing) add test