ext/simplexml/simplexml.c
@@ -18,7 +18,7 @@
   +----------------------------------------------------------------------+
 */
 
-/* $Id: simplexml.c,v 1.151.2.22.2.13 2006/08/07 10:15:12 rrichards Exp $ */
+/* $Id: simplexml.c,v 1.151.2.22.2.14 2006/08/14 11:57:50 rrichards Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -366,6 +366,8 @@ static zval * sxe_dimension_read(zval *object, zval *offset, int type TSRMLS_DC)
 static void change_node_zval(xmlNodePtr node, zval *value TSRMLS_DC)
 {
 	zval value_copy;
+	xmlChar *buffer;
+	int buffer_len;
 
 	if (!value)
 	{
@@ -385,7 +387,20 @@ static void change_node_zval(xmlNodePtr node, zval *value TSRMLS_DC)
 			convert_to_string(value);
 			/* break missing intentionally */
 		case IS_STRING:
-			xmlNodeSetContentLen(node, (xmlChar *)Z_STRVAL_P(value), Z_STRLEN_P(value));
+			if (node->type == XML_ATTRIBUTE_NODE) {
+				buffer = xmlEncodeEntitiesReentrant(node->doc, (xmlChar *)Z_STRVAL_P(value));
+				buffer_len = xmlStrlen(buffer);
+			} else {
+				buffer = (xmlChar *)Z_STRVAL_P(value);
+				buffer_len = Z_STRLEN_P(value);
+			}
+			/* check for NULL buffer in case of memory error in xmlEncodeEntitiesReentrant */
+			if (buffer) {
+				xmlNodeSetContentLen(node, buffer, buffer_len);
+				if (node->type == XML_ATTRIBUTE_NODE) {
+					xmlFree(buffer);
+				}
+			}
 			if (value == &value_copy) {
 				zval_dtor(value);
 			}
@@ -2316,7 +2331,7 @@ PHP_MINFO_FUNCTION(simplexml)
 {
 	php_info_print_table_start();
 	php_info_print_table_header(2, "Simplexml support", "enabled");
-	php_info_print_table_row(2, "Revision", "$Revision: 1.151.2.22.2.13 $");
+	php_info_print_table_row(2, "Revision", "$Revision: 1.151.2.22.2.14 $");
 	php_info_print_table_row(2, "Schema support",
 #ifdef LIBXML_SCHEMAS_ENABLED
 		"enabled");
